--- a/reference/6/Microsoft.PowerShell.Core/About/关于_继续.md
+++ b/reference/6/Microsoft.PowerShell.Core/About/关于_继续.md
@@ -34,7 +34,7 @@ while ($ctr -lt 10)
 
 当使用`For`循环时，将从`<重复>`语句继续执行，
  通过`< 条件>`判断是否继续。 在下面的示例中，不会发生无限循环
- ，因为`$i`的减量关键词出现在`Continue`之后
+ ，因为`$i`的减量关键词出现在`继续`之后
  。
 
 ```powershell
